...
            "state" : "translated",
            "value" : "選び直す"
          }
        }
      }
    },
    "다시 시도" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Try again"
...
            "state" : "translated",
            "value" : "もう一度試す"
          }
        }
      }
    },
    "다음" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Next"
...
            "state" : "translated",
            "value" : "次のクリップ"
          }
        }
      }
    },
    "닫기" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Close"
...
            "state" : "translated",
            "value" : "閉じる"
          }
        }
      }
    },
    "뒤로" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Back"
...
            "state" : "translated",
            "value" : "ドラッグで移動、ピンチでサイズ変更。ダブルタップでリセット。"
          }
        }
      }
    },
    "라벨" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Label"
...
            "state" : "translated",
            "value" : "削除したクリップは現在のタイムラインから取り除かれます。"
          }
        }
      }
    },
    "새 Vlog 만들기" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Create new Vlog"
...
            "state" : "translated",
            "value" : "少々お待ちください"
          }
        }
      }
    },
    "재생" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Play"
...
            "state" : "translated",
            "value" : "夕焼け"
          }
        }
      }
    },
    "저장" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
...
            "state" : "translated",
            "value" : "提案"
          }
        }
      }
    },
    "조정" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Adjust"
...
            "state" : "translated",
            "value" : "カフェのテーブル"
          }
        }
      }
    },
    "크기" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Size"
...
            "state" : "translated",
            "value" : "ヒョプジェビーチ"
          }
        }
      }
    },
    "홈으로" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Home"
...
            "state" : "translated",
            "value" : "OK"
          }
        }
      }
    },
    "회전" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rotate"
...
